# AI-AIRCRAFT-MAINTENANCE-PLATFORM

./: .gitignore  Deploying_AI_Aircraft_Maintenance_Application_on_Amazon_EKS_Imperative.md  Github-Actions-CICD.md  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: app.py  dockerfile  pyproject.toml  requirements.txt
backend/data/: aircraft_maintenance_intelligence_dataset.xlsx
backend/src/: __init__.py
backend/src/aircraft_maintenance/: __init__.py  bedrock_maintenance_analyzer.py  engineering_analytics.py
frontend/: .env  dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: PanelCard.jsx
kubernetes/: aws-secret.yaml  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
